Only show background of editor on mouse hover

--- a/src/css/_editor.css
+++ b/src/css/_editor.css
@@ -36,10 +36,6 @@
 }
 
 /* When the canvas_background option is set to true: */
-.background-mode .CodeMirror {
-    text-shadow: rgba(0, 0, 0, 1) 0px 1px 2px;
-}
-
 .background-mode .ge_editor {
     position: absolute;
     z-index: var(--z-editor-background-mode);
@@ -49,11 +45,17 @@
     height: auto;
     resize: both;
     overflow: auto;
+    background: none;
+    transition: background 0.15s ease-out;
+}
+
+.background-mode .ge_editor:hover {
     background: rgba(0, 0, 0, 0.5);
 }
 
 .background-mode .CodeMirror {
     background: transparent !important;
+    text-shadow: rgba(0, 0, 0, 1) 0px 1px 2px;
 }
 
 .background-mode .CodeMirror-gutters {
