--- a/src/css/_editor.css
+++ b/src/css/_editor.css
@@ -43,6 +43,7 @@
     top: 0;
     padding-right: 10px;
     height: auto;
+    width: 50vw;
     resize: both;
     overflow: auto;
     background: none;
@@ -54,6 +55,7 @@
 }
 
 .background-mode .CodeMirror {
+    height: 100%;
     background: transparent !important;
     text-shadow: rgba(0, 0, 0, 1) 0px 1px 2px;
 }
